fixed index wrapping and margin

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -27,19 +27,13 @@
     border: #85BDA6;
   }
   &:hover {
-    background-color: #000;
-    // border: 1px solid white;
+    border: 1px solid #85BDA6;
     &:after {
       left: 0;
       width: 100%;
     }
   }
 }
-
-// .btn-home:hover {
-//   background:transparent;
-//   border: 1px solid #4A4A4A;
-// }
 
 
 .btn-transparent {
